# pistache_article

go/helloWorld/: README.md  go.mod  go.sum  main.go
go/logging/: Dockerfile  go.mod  go.sum  main.go
go/logging/sieve/: sieve.go
go/primes/: .gitignore  README.md  go.sum  main.go
go/primes/sieve/: sieve.go
jmeter/: PerformanceTests.jmx  test.sh
monitoring/: docker-compose.yml  prometheus.yml
pistache/helloWorld/: .gitignore  Dockerfile  main.cpp
pistache/logging/: CMakeLists.txt  Dockerfile  Server.hpp  SieveOfAtkin.hpp  main.cpp
pistache/primes/: CMakeLists.txt  Server.hpp  main.cpp
quarkus/helloWorld/: pom.xml
quarkus/helloWorld/src/main/docker/: Dockerfile.jvm  Dockerfile.native
quarkus/helloWorld/src/main/java/ch/adesso/demo/: Main.java
quarkus/logging/: README.md  pom.xml
quarkus/logging/src/main/docker/: Dockerfile.jvm
quarkus/logging/src/main/java/ch/adesso/demo/: Server.java
quarkus/logging/src/main/resources/: application.properties
quarkus/primes/: pom.xml
quarkus/primes/src/main/java/ch/adesso/demo/: PrimesDto.java  Server.java  SieveOfAtkin.java
spring-graalvm/: .project
spring-graalvm/helloWorld/: pom.xml
spring-graalvm/helloWorld/src/main/java/ch/adesso/demo/: Main.java  Server.java
spring-graalvm/logging/: pom.xml
spring-graalvm/logging/src/main/resources/: application.properties
spring-graalvm/primes/: pom.xml
spring-jvm/: .project
spring-jvm/helloWorld/: pom.xml
spring-jvm/logging/: pom.xml
spring-jvm/logging/src/main/resources/: application.properties
spring-jvm/primes/: Dockerfile  pom.xml
(+10 files in other folders)
